add msg encoding and content type

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ API_KEY=Cn0mGqC1GKJSs8sVdLqqPpmK6ZuEehs1
 PLATFORM_AGENT_API_URL=http://172.20.10.152:8080/scaft-platform-agent/api
 PLATFORM_AGENT_API_TOKEN=eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJhcGktdXNlciJ9.j5HbIaGv_0efaqrPdJ1N5nwG-UM8_KmG1CP1nN3usEQ
 ML_MODELS_DIR=/home/scaft-admin/ml-models
-#CONNECTION_STRING=HostName=IHPC-TestHub.azure-devices.net;DeviceId=IHPC-RR-Device;SharedAccessKey=7JMfS0iGAUuxScEiKMf/Vha9YA9cn7hhfaZ3H793aEE=
-CONNECTION_STRING="HostName=rr-sg.azure-devices.net;DeviceId=myHomePc;SharedAccessKey=KtnPozit81a3+YADL1PcwwpTmppvEjwIh+QSRl5XwKk="
+CONNECTION_STRING=HostName=IHPC-TestHub.azure-devices.net;DeviceId=IHPC-RR-Device;SharedAccessKey=7JMfS0iGAUuxScEiKMf/Vha9YA9cn7hhfaZ3H793aEE=
+#CONNECTION_STRING=HostName=rr-sg.azure-devices.net;DeviceId=myHomePc;SharedAccessKey=KtnPozit81a3+YADL1PcwwpTmppvEjwIh+QSRl5XwKk=
